Made correction in the display page. To include planner and list of all participants

--- a/Views/DojoActivity/AddActivity.cshtml
+++ b/Views/DojoActivity/AddActivity.cshtml
@@ -13,5 +13,5 @@
 <h5>Participants:</h5>
 @foreach(var x in @ViewBag.oneactivity.Participants)
 {
-    <p>@x.User.FirstName</p>
+    <p>@x.Participant.FirstName</p>
 }
